<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="registerModel"
            type="com.loufei.teambook.ui.login.view_model.RegisterViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/layout_title"
            layout="@layout/title_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_normal" />

        <EditText
            android:id="@+id/et_register_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_normal"
            android:drawableStart="@mipmap/login_username_icon"
            android:drawableLeft="@mipmap/login_username_icon"
            android:drawablePadding="5dp"
            android:hint="@string/input_phone_hint"
            android:inputType="phone"
            android:textSize="@dimen/text_normal"
            app:layout_constraintTop_toBottomOf="@id/layout_title" />

        <EditText
            android:id="@+id/et_register_verifyCode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_normal"
            android:drawableStart="@mipmap/register_verify_code_icon"
            android:drawableLeft="@mipmap/register_verify_code_icon"
            android:drawablePadding="5dp"
            android:hint="@string/input_verify_code_hint"
            android:inputType="number"
            android:textSize="@dimen/text_normal"
            app:layout_constraintHorizontal_weight="2"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/btn_register_send_code"
            app:layout_constraintTop_toBottomOf="@id/et_register_phone" />

        <Button
            android:id="@+id/btn_register_send_code"
            android:text="@{registerModel.sendCodeText}"
            android:onClick="sendVerifyCode"
            android:enabled="@{registerModel.sendCodeState.booleanValue()}"
            android:layout_width="0dp"
            android:background="@null"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin_normal"
            app:layout_constraintBaseline_toBaselineOf="@id/et_register_verifyCode"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintLeft_toRightOf="@id/et_register_verifyCode"
            app:layout_constraintRight_toRightOf="parent" />


        <EditText
            android:id="@+id/et_register_input_pwd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_normal"
            android:drawableStart="@mipmap/login_password_icon"
            android:drawableLeft="@mipmap/login_password_icon"
            android:drawablePadding="5dp"
            android:hint="@string/input_register_pwd_hint"
            android:inputType="number"
            android:textSize="@dimen/text_normal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_register_send_code" />


        <TextView
            android:id="@+id/tv_register"
            android:layout_width="0dp"
            android:enabled="@{registerModel.registerState.dataValid}"
            android:layout_height="@dimen/height_normal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_margin="@dimen/margin_normal"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/et_register_input_pwd"
            android:text="@string/register"
            android:background="@drawable/shape_oval_bg"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>