<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="model"
            type="com.loufei.teambook.ui.home.HomeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <include
            android:id="@+id/layout_title"
            layout="@layout/common_toolbar"
             />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/home_head"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/toolbar_main_color_bg"
            android:minHeight="170dp"
            app:layout_constraintTop_toBottomOf="@id/layout_title">

            <TextView
                android:id="@+id/tv_month_expense_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_normal"
                android:text="@string/month_expense"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_month_expense_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_normal"
                android:layout_marginTop="8dp"
                android:text="@{model.expenseMonthValue}"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_month_expense_title" />


            <TextView
                android:id="@+id/tv_income_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_normal"
                android:layout_marginTop="@dimen/margin_second"
                android:text="@string/income"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_month_expense_value" />

            <TextView
                android:id="@+id/tv_income_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@{model.incomeValue}"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBaseline_toBaselineOf="@id/tv_income_title"
                app:layout_constraintLeft_toRightOf="@id/tv_income_title" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

            <TextView
                android:id="@+id/tv_surplus_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_normal"
                android:text="@string/surplus"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintBaseline_toBaselineOf="@id/tv_income_title"
                app:layout_constraintLeft_toRightOf="@id/guideline" />

            <TextView
                android:id="@+id/tv_surplus_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@{model.surplusValue}"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBaseline_toBaselineOf="@id/tv_income_title"
                app:layout_constraintLeft_toRightOf="@id/tv_surplus_title" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <Space
            android:id="@+id/spacer"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="38dp"
            app:layout_constraintBottom_toBottomOf="@id/home_head"
            app:layout_constraintLeft_toLeftOf="@id/home_head"
            app:layout_constraintRight_toRightOf="@id/home_head" />

        <androidx.cardview.widget.CardView
            android:id="@+id/home_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_normal"
            android:layout_marginRight="@dimen/margin_normal"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:layout_constraintTop_toBottomOf="@id/spacer">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/margin_normal"
                android:paddingBottom="@dimen/margin_normal">

                <LinearLayout
                    android:id="@+id/ll1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/ll2"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/home_assets" />

                    <TextView
                        style="@style/Home_Card_text"
                        android:text="@string/my_assets" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/ll3"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/ll1"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/home_calendar_account" />

                    <TextView
                        style="@style/Home_Card_text"
                        android:text="@string/home_calendar_account" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/ll4"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/ll2"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/home_annual_bill" />

                    <TextView
                        style="@style/Home_Card_text"
                        android:text="@string/home_annual_ledger" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/ll3"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/home_common_functions" />

                    <TextView
                        style="@style/Home_Card_text"
                        android:text="@string/home_common_functions" />
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/home_recyclerView"
            android:layout_width="match_parent"
            android:background="@color/white"
            android:overScrollMode="never"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/home_card"
            app:layout_constraintBottom_toBottomOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>