<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <com.github.florent37.diagonallayout.DiagonalLayout
        android:id="@+id/diagonalLayout_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_normal"
        android:layout_marginTop="@dimen/margin_second"
        android:layout_marginRight="@dimen/margin_normal"
        app:diagonal_angle="15"
        app:diagonal_direction="right"
        app:diagonal_position="top"
        app:layout_constraintTop_toTopOf="parent">


        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginBottom="24dp"
            app:cardCornerRadius="@dimen/card_corners"
            app:cardElevation="20dp"
            app:cardPreventCornerOverlap="true">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_phone_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_second"
                android:layout_marginLeft="@dimen/margin_second"
                android:layout_marginRight="@dimen/margin_second"
                android:hint="@string/input_phone_hint"
                app:counterEnabled="true"
                app:counterMaxLength="11"
                app:errorEnabled="true"
                app:hintAnimationEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:inputType="phone"
                    android:textSize="@dimen/text_normal" />

            </com.google.android.material.textfield.TextInputLayout>


        </com.google.android.material.card.MaterialCardView>
    </com.github.florent37.diagonallayout.DiagonalLayout>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/aiv_user_icon_username"
        android:layout_width="@dimen/margin_large"
        android:layout_height="@dimen/margin_large"
        android:layout_gravity="center_horizontal"
        android:src="@mipmap/default_img_people"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/diagonalLayout_username" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mbtn_next_sign_in_username"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/height_normal"
        android:layout_marginTop="@dimen/margin_normal"
        android:gravity="center"
        android:text="@string/next_login"
        android:textAppearance="?android:attr/textAppearanceLargeInverse"
        android:textColor="@color/white"
        android:textSize="@dimen/text_normal"
        app:backgroundTint="@color/black"
        app:cornerRadius="180dp"
        app:layout_constraintBottom_toBottomOf="@id/diagonalLayout_username"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:rippleColor="@color/white" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/act_sign_up_username"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/height_normal"
        android:layout_marginTop="@dimen/margin_second"
        android:gravity="center"
        android:text="@string/sign_up"
        android:textColor="@color/black"
        android:textSize="@dimen/title_small"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mbtn_next_sign_in_username" />
</androidx.constraintlayout.widget.ConstraintLayout>