<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <com.github.florent37.diagonallayout.DiagonalLayout
        android:id="@+id/diagonalLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_normal"
        android:layout_marginTop="@dimen/margin_second"
        android:layout_marginRight="@dimen/margin_normal"
        app:diagonal_angle="15"
        app:diagonal_direction="right"
        app:diagonal_position="top"
        app:layout_constraintTop_toTopOf="parent">


        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginBottom="24dp"
            app:cardCornerRadius="@dimen/card_corners"
            app:cardElevation="20dp"
            app:cardPreventCornerOverlap="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_marginTop="@dimen/margin_second"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="60dp"
                    android:id="@+id/act_username_pwd"
                    tools:text="吃"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_normal"
                    android:textColor="@color/black"
                    />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_pwd"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/float_button_size"
                    android:layout_marginLeft="@dimen/margin_second"
                    android:layout_marginRight="@dimen/margin_second"
                    android:hint="@string/input_pwd_hint"
                    app:errorEnabled="true"
                    app:hintAnimationEnabled="true"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:inputType="textPassword"
                        android:textSize="@dimen/text_normal" />

                </com.google.android.material.textfield.TextInputLayout>


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/act_forget_pwd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_normal"
                    android:text="@string/forget_pwd"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_small"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/til_pwd" />
            </androidx.constraintlayout.widget.ConstraintLayout>


        </com.google.android.material.card.MaterialCardView>
    </com.github.florent37.diagonallayout.DiagonalLayout>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/aiv_user_icon_pwd"
        android:layout_width="@dimen/margin_large"
        android:layout_height="@dimen/margin_large"
        android:layout_gravity="center_horizontal"
        android:src="@mipmap/default_img_people"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/diagonalLayout" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mbtn_next_sign_in_pwd"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/height_normal"
        android:layout_marginTop="@dimen/margin_normal"
        android:gravity="center"
        android:text="@string/next_login"
        android:onClick="@{ml}"
        android:textAppearance="?android:attr/textAppearanceLargeInverse"
        android:textColor="@color/white"
        android:textSize="@dimen/text_normal"
        app:backgroundTint="@color/black"
        app:cornerRadius="180dp"
        app:layout_constraintBottom_toBottomOf="@id/diagonalLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:rippleColor="@color/white" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/act_sign_up_pwd"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/height_normal"
        android:layout_marginTop="@dimen/margin_second"
        android:gravity="center"
        android:text="@string/sign_up"
        android:textColor="@color/black"
        android:textSize="@dimen/title_small"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mbtn_next_sign_in_pwd" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_normal"
        android:src="@drawable/ic_arrow_back_black_24dp"
        app:backgroundTint="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/act_sign_up_pwd"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/act_sign_up_pwd"
        app:rippleColor="@color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>