<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="model"
            type="com.loufei.teambook.ui.login.view_model.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/margin_normal"
        android:background="@color/white">


        <TextView
            android:id="@+id/tv_tip_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_normal"
            android:text="@{model.tipTitleText}"
            android:textColor="@color/main_text_color"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="输入账号密码" />

        <EditText
            android:id="@+id/et_login_phone"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="@dimen/margin_normal"
            android:background="@null"
            android:gravity="bottom"
            android:hint="@string/input_phone_hint"
            android:inputType="phone"
            android:textSize="@dimen/text_normal"
            app:layout_constraintTop_toBottomOf="@id/tv_tip_title" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="@dimen/margin_normal"
            android:layout_marginTop="3dp"
            android:layout_marginRight="@dimen/margin_normal"
            android:background="@color/third_text_color"
            app:layout_constraintTop_toBottomOf="@id/et_login_phone" />

        <EditText
            android:id="@+id/et_login_verifyCode"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_margin="@dimen/margin_normal"
            android:background="@null"
            android:gravity="bottom"
            android:hint="@string/input_verify_code_hint"
            android:inputType="number"
            android:textSize="@dimen/text_normal"
            app:layout_constraintHorizontal_weight="2"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/btn_login_send_code"
            app:layout_constraintTop_toBottomOf="@id/et_login_phone" />

        <TextView
            android:id="@+id/btn_login_send_code"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginRight="@dimen/margin_normal"
            android:enabled="@{model.loginSendCodeState.booleanValue()}"
            android:visibility="@{model.whichFragmentPos==0?View.VISIBLE:View.GONE}"
            android:gravity="end|bottom"
            android:text="@{model.loginSendCodeText}"
            android:textColor="@color/main_color"
            app:layout_constraintBottom_toBottomOf="@id/et_login_verifyCode"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintLeft_toRightOf="@id/et_login_verifyCode"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/et_login_verifyCode" />

        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@id/et_login_verifyCode"
            android:id="@+id/guideline"
            android:orientation="vertical"
            />

        <TextView
            android:id="@+id/btn_register_send_code"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginRight="@dimen/margin_normal"
            android:enabled="@{model.registerSendCodeState.booleanValue()}"
            android:visibility="@{model.whichFragmentPos==1?View.VISIBLE:View.GONE}"
            android:gravity="end|bottom"
            android:text="@{model.registerSendCodeText}"
            android:textColor="@color/main_color"
            app:layout_constraintBottom_toBottomOf="@id/et_login_verifyCode"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintLeft_toRightOf="@id/guideline"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/et_login_verifyCode" />


        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="@dimen/margin_normal"
            android:layout_marginTop="3dp"
            android:layout_marginRight="@dimen/margin_normal"
            android:background="@color/third_text_color"
            app:layout_constraintTop_toBottomOf="@id/et_login_verifyCode" />

        <TextView
            android:id="@+id/tv_pwd_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_normal"
            android:text="@string/pwd_login"
            android:textColor="@color/main_color"
            android:textSize="14sp"
            android:visibility="@{model.whichFragmentPos==0?View.VISIBLE:View.GONE}"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view" />

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="0dp"
            android:layout_height="@dimen/height_normal"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_marginLeft="@dimen/margin_normal"
            android:layout_marginRight="@dimen/margin_normal"
            android:background="@drawable/shape_oval_bg"
            android:enabled="@{model.loginFromState.dataValid}"
            android:gravity="center"
            android:text="@{model.loginBtnText}"
            android:textColor="@color/white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_pwd_login" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>